# api-warehouse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  new_pattern.md
.github/workflows/: ci.yml
api_warehouse/: __init__.py  normalize.py  pipeline.py  profile.py  reconcile.py  report.py
docs/superpowers/plans/: 2026-06-28-api-warehouse.md
docs/superpowers/specs/: 2026-06-28-api-ingestion-plugin-design.md
examples/jsonplaceholder/: README.md
references/: anti-slop.md  auth-patterns.md  destinations.md  incremental-detection.md  pagination-patterns.md  running-evals.md  security.md
skills/api-warehouse/: EVALS.md  MEMORY.md  SKILL.md
skills/assess/: EVALS.md  MEMORY.md  SKILL.md
skills/connect/: EVALS.md  MEMORY.md  SKILL.md
skills/land/: EVALS.md  MEMORY.md  SKILL.md
skills/schedule/: EVALS.md  MEMORY.md  SKILL.md
skills/validate/: EVALS.md  MEMORY.md  SKILL.md
templates/: .dockerignore  Dockerfile
templates/deploy/: aws-ecs.md  azure-container-apps.md  cloud-run.md
tests/: test_e2e_jsonplaceholder.py  test_normalize.py  test_pipeline.py  test_plugin_structure.py  test_profile.py  test_reconcile.py  test_report.py
