[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-warehouse"
version = "0.1.0"
description = "Any API docs -> assessment, sample data, and raw data landed in your warehouse."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhilip Subramanian" }]
dependencies = ["dlt[duckdb]>=1.0"]

[project.optional-dependencies]
warehouses = ["dlt[bigquery,snowflake,postgres]>=1.0"]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["api_warehouse"]
